// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar render confirmation should render confirmation markup 1`] = `
<body>
  <div>
    <div
      class="titlebar"
      data-spec="titlebar-container"
    >
      <div
        class="undefined normal"
        data-spec="titlebar"
      >
        <div
          class="up_button"
          data-testid="move-icon"
        >
          <span
            class="fe-arrow-up"
          />
        </div>
        <div
          class="remove_button"
          data-testid="remove-icon"
        >
          <span
            class="fe-x"
          />
        </div>
        Send Message
      </div>
      <div
        class="remove_confirm"
        data-spec="confirmation"
      >
        <div
          class="remove_button"
          data-testid="confirm-removal"
        >
          <span
            class="fe-x"
          />
        </div>
        Remove?
      </div>
    </div>
  </div>
</body>
`;

exports[`TitleBar render move icon should call onMoveUp 1`] = `
<body>
  <div>
    <div
      class="titlebar"
      data-spec="titlebar-container"
    >
      <div
        class="undefined normal"
        data-spec="titlebar"
      >
        <div
          class="up_button"
          data-testid="move-icon"
        >
          <span
            class="fe-arrow-up"
          />
        </div>
        Send Message
      </div>
    </div>
  </div>
</body>
`;

exports[`TitleBar render move icon should render move icon 1`] = `
<div>
  <div
    class="titlebar"
    data-spec="titlebar-container"
  >
    <div
      class="undefined normal"
      data-spec="titlebar"
    >
      <div
        class="up_button"
        data-testid="move-icon"
      >
        <span
          class="fe-arrow-up"
        />
      </div>
      Send Message
    </div>
  </div>
</div>
`;

exports[`TitleBar render remove icon should render remove icon 1`] = `
<body>
  <div>
    <div
      class="titlebar"
      data-spec="titlebar-container"
    >
      <div
        class="undefined normal"
        data-spec="titlebar"
      >
        <div
          class="up_button"
          data-testid="move-icon"
        >
          <span
            class="fe-arrow-up"
          />
        </div>
        <div
          class="remove_button"
          data-testid="remove-icon"
        >
          <span
            class="fe-x"
          />
        </div>
        Send Message
      </div>
    </div>
  </div>
</body>
`;

exports[`TitleBar render should apply _className prop 1`] = `
<div>
  <div
    class="titlebar"
    data-spec="titlebar-container"
  >
    <div
      class="some-classy-class normal"
      data-spec="titlebar"
    >
      <div
        class="up_button"
        data-spec="move"
      />
      Send Message
    </div>
  </div>
</div>
`;

exports[`TitleBar render should render self, children with base props 1`] = `
<div>
  <div
    class="titlebar"
    data-spec="titlebar-container"
  >
    <div
      class="undefined normal"
      data-spec="titlebar"
    >
      <div
        class="up_button"
        data-spec="move"
      />
      Send Message
    </div>
  </div>
</div>
`;
